--- a/src/app/layout/topbar/topbar.html
+++ b/src/app/layout/topbar/topbar.html
@@ -1,9 +1,10 @@
-<header
-  class="bg-background sticky top-0 z-50 flex w-full items-center border-b"
->
-  <div class="flex h-(--header-height) w-full items-center gap-2 px-4">
+<header class="flex h-16 shrink-0 items-center gap-2">
+  <div class="w-full flex items-center justify-between gap-2 px-4">
     <button hlmSidebarTrigger></button>
-    <hlm-separator orientation="vertical" class="mr-2" />
+    <hlm-separator
+      orientation="vertical"
+      class="mr-2 data-[orientation=vertical]:h-4"
+    />
     <!-- <nav hlmBreadcrumb class="hidden sm:block">
       <ol hlmBreadcrumbList>
         <li hlmBreadcrumbItem>
